--- a/src/main/resources/about/About.fxml
+++ b/src/main/resources/about/About.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import java.net.URL?>
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.121"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.butilov.mathmodel.model.AboutController">
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.butilov.mathmodel.controllers.AboutController">
     <BorderPane>
         <stylesheets>
             <URL value="@../base.css"/>
