--- a/src/main/resources/theory/Theory.fxml
+++ b/src/main/resources/theory/Theory.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 <?import java.net.URL?>
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.121"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.butilov.mathmodel.model.TheoryController">
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.butilov.mathmodel.controllers.TheoryController">
     <BorderPane>
         <stylesheets>
             <URL value="@../base.css"/>
