--- a/src/main/resources/model/Model.fxml
+++ b/src/main/resources/model/Model.fxml
@@ -190,6 +190,11 @@
                                 <Insets top="10.0"/>
                             </VBox.margin>
                         </JFXButton>
+                        <JFXButton fx:id="localeButton" styleClass="action-button" text="Сменить язык">
+                            <VBox.margin>
+                                <Insets top="10.0"/>
+                            </VBox.margin>
+                        </JFXButton>
                     </VBox>
 
                 </VBox>
