--- a/src/main/resources/model/Model.fxml
+++ b/src/main/resources/model/Model.fxml
@@ -61,7 +61,7 @@
                             </JFXSlider>
                         </StackPane>
                         <HBox>
-                            <Label fx:id="N0Label" alignment="CENTER" text="N0 = ">
+                            <Label fx:id="N0Label" alignment="CENTER" text="No = ">
                                 <HBox.margin>
                                     <Insets top="4.0"/>
                                 </HBox.margin>
@@ -101,7 +101,7 @@
                             </JFXSlider>
                         </StackPane>
                         <HBox>
-                            <Label fx:id="P0Label" alignment="CENTER" text="P0 = ">
+                            <Label fx:id="P0Label" alignment="CENTER" text="Po = ">
                                 <HBox.margin>
                                     <Insets top="4.0"/>
                                 </HBox.margin>
