--- a/src/main/resources/about/About.fxml
+++ b/src/main/resources/about/About.fxml
@@ -1,14 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
+<?import com.jfoenix.controls.JFXMasonryPane?>
+<?import com.jfoenix.controls.JFXTextArea?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.*?>
 <?import java.net.URL?>
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
-    <BorderPane>
+    <BorderPane minWidth="840">
         <stylesheets>
             <URL value="@../base.css"/>
         </stylesheets>
         <center>
+            <JFXMasonryPane minWidth="840">
+                <VBox styleClass="card">
+                    <StackPane styleClass="header" VBox.vgrow="ALWAYS">
+                        <Label text="aboutHeader"/>
+                    </StackPane>
+                    <StackPane prefHeight="160.0" prefWidth="550.0" styleClass="body">
+                        <JFXTextArea
+                                text="Вкладка Теоретический материал позволяет ознакомиться с теоретическими основами, использованными при реализации данной модели.">
+                        </JFXTextArea>
+                    </StackPane>
+                </VBox>
+                <BorderPane.margin>
+                    <Insets left="10.0" top="10.0" bottom="10"/>
+                </BorderPane.margin>
+            </JFXMasonryPane>
         </center>
     </BorderPane>
 </AnchorPane>
